--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -13,13 +13,15 @@
   }
 }
 
-body{
-  height:100vh;
+body,html{
+  height: 1890px;
+  overflow: hidden;
 }
 .heading{
   height:220px;
   width:90vw;
   margin: 0 auto;
+  
 }
 .logo{
   width: 100%;
@@ -27,8 +29,21 @@ body{
 video, canvas{
   right: 0;
   position: absolute;
-  width:100vw;
   height:1660px;
+  width: 2048px;
+  left: -50%;
+  transform: scaleX(-1) translateY(40px);
+}
+canvas{
+  height: 1500px;
+}
+.frame{
+  position: absolute;
+  border:55px solid #FFF;
+  border-radius: 20px;
+  width: 96vw;
+  height:1460px;
+  bottom:-140px;
 }
 main{
   position: relative;
@@ -36,18 +51,27 @@ main{
   justify-content: center;
   align-items: center;
   height:1390px;
+  border: 10px solid #fff;
 }
 
 .square{
   width: 50vw;
+  z-index:2;
+  fill: #fff;
+  stroke-width: 2;
 }
 .subtitle{
   text-align: center;
-  font-size:3rem;
+  font-size:3.5rem;
+  font-family: helvetica;
+  font-weight: 100
 }
 .hand{
-  width:50px;
+  z-index:2;
+  width:80px;
   position: absolute;
-  bottom: 520px;
+  bottom: 480px;
   animation: inOut 2s ease-in-out infinite;
+  stroke: #fff ;
+  stroke-width: 0.3;
 }
