--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -16,17 +16,20 @@
 body,html{
   height: 1890px;
   overflow: hidden;
+  margin: 0;
+  font-family: helvetica;
 }
 .heading{
-  height:220px;
+  height:360px;
   width:90vw;
   margin: 0 auto;
-  
 }
 .logo{
-  width: 100%;
+  width: 900px;
+  position: absolute;
+  z-index:1;
 }
-video, canvas{
+#videoPhoto,#canvasPhoto{
   right: 0;
   position: absolute;
   height:1660px;
@@ -34,7 +37,7 @@ video, canvas{
   left: -50%;
   transform: scaleX(-1) translateY(40px);
 }
-canvas{
+.canvasPhoto{
   height: 1500px;
 }
 .frame{
@@ -43,11 +46,13 @@ canvas{
   border-radius: 20px;
   width: 96vw;
   height:1460px;
-  bottom:-140px;
+  bottom:-165px;
+  z-index:100;
 }
-main{
+.home{
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height:1390px;
@@ -63,15 +68,154 @@ main{
 .subtitle{
   text-align: center;
   font-size:3.5rem;
-  font-family: helvetica;
   font-weight: 100
 }
 .hand{
   z-index:2;
-  width:80px;
+  width:140px;
   position: absolute;
-  bottom: 480px;
+  bottom: 450px;
   animation: inOut 2s ease-in-out infinite;
-  stroke: #fff ;
+  fill: #fff ;
   stroke-width: 0.3;
+}
+.subtitle{
+  position:absolute;
+  bottom: -157px;
+  z-index:1;
+  svg{
+    width: 1070px;
+  }
+}
+/* #1E1E1E */
+.top{
+  height: 110px;
+  background-color: #1E1E1E;
+  border-radius: 0 0 5px 5px;
+  color: #fff;
+  padding: 40px 0;
+  display: flex;
+  align-items: center;
+}
+
+.alfred{
+  width:1024px;
+  margin: 0 auto;
+}
+.alfred__image{
+  width: 100%;
+  margin: 0;
+  position: absolute;
+  bottom: -5px;
+}
+.alfred__text{
+  position: absolute;
+  bottom: 180px;
+  width: 700px;
+}
+.backButton{
+  border-radius: 50%;
+  background-color: #fff;
+  width: 100px;
+  height: 100px;
+  margin: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  svg{
+    width: 55px;
+  }
+}
+.product{
+  margin-left: 7rem;
+  display: flex;
+  align-items: center;
+}
+.product__img{
+  padding: 2rem;
+}
+.product__name{
+  font-weight: bold;
+  font-size: 2rem;
+  margin: 0;
+}
+.product__color{
+  margin: .3rem 0 0 0;
+  font-size: 1.4rem;
+}
+.main{
+  height:1250px;
+}
+.main__title{
+  text-align: center;
+  font-size: 3.8rem;
+  margin: 2.5rem 0 0 0;
+  font-weight: 600;
+  &::after{
+    content: ' ';
+    margin: 4rem auto 0 auto;
+    display: block;
+    height:1px;
+    width: 940px;
+    background-color: rgb(163, 163, 163);
+  }
+}
+.content{
+  display: flex;
+}
+.content__image{
+  margin:-80px 0 0 -80px;
+}
+.content__tie{
+  margin: 4rem 0;
+}
+.tie__name{
+  font-size: 3rem;
+  font-weight: 100;
+  margin: .5rem 0;
+}
+.tie__info{
+  font-size: 2em;
+  font-weight: 100;
+  font-style: italic;
+  margin: .5rem 0;
+}
+.content__advice{
+  margin: 4rem 0;
+}
+.advice__title{
+  font-size: 2.5rem;
+}
+.advice__context{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.context__title{
+  font-size: 1.5rem;
+}
+.context__exemple{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin:0 3rem;
+}
+.exemple__name{
+  font-size: 1.5rem;
+}
+.exemple__logo{
+  width:90px;
+}
+.advice__knot{
+  font-size: 1.5rem;
+  margin: 5rem 0;
+}
+.knot__name{
+  font-weight: normal;
+}
+.anim3D{
+  width: 650px;
+  height: 400px;
+  background-color: grey;
 }
